syntax = "proto3";

package session;

import "google/protobuf/empty.proto";

service SessionService {
  rpc Sessions (google.protobuf.Empty) returns (stream Session);
}

message Session {
  string id = 1;
  uint64 createdAt = 2;
  string ip = 3;
  enum Os {
    WINDOWS = 0;
    ANDROID = 1;
    MACOS = 2;
    IOS = 3;
    LINUX = 4;
  }
  Os os = 4;
}