syntax = "proto3";

package user;

import "common.proto";

service UserService {
  rpc Register(CreateUser) returns (common.User);
  rpc Login(LoginInput) returns (LoginResponse);
}

message LoginResponse {
  string token = 1;
}

message CreateUser {
  string email = 1;
  string masterPassword = 2;
}

message LoginInput {
  string email = 1;
  string masterPassword = 2;
}